# lostia-professional-dev

./: LICENSE  README.md  main.py  pyproject.toml
LostiaFiles/: .ash_env_name  .ash_env_value  .gripple_history  F.losanim  Logo.loslogo  Lostiaerrorcritical.loserror  current.directory  idk.losanim  keychain.keychain  lostiaSoftwarerunerror.loserror  octobanana.losanim  plane.losanim  user.data
LostiaFiles/root/etc/: lostia-release
LostiaHelp/: adduser.help  ash.help  cat.help  clear.help  cp.help  date.help  deluser.help  echo.help  history.help  install.help  listusers.help  login.help  logout.help  ls.help  mkdir.help  modules.help  passwd.help  printenv.help  pwd.help  rm.help  rmdir.help  top.help  touch.help  uname.help
LostiaMain/: CoreConf.config  ModuleConf.config  commandhandler.py
clib/: !.py  adduser.py  asciimation.py  ash.py  cat.py  cd.py  clear.py  command.py  cp.py  date.py  deluser.py  echo.py  example.py  forceruntest.py  help.py  history.py  install.py  listusers.py  login.py  logout.py  ls.py  mkdir.py  modules.py  passwd.py  percpu.py  printenv.py  pwd.py  rm.py  rmdir.py  terminalclock.py  test.py  testenv.py  testforinp.py  testing.py  top.py  touch.py  tree.py  uname.py  whoami.py
